--- a/index.html
+++ b/index.html
@@ -4,18 +4,49 @@
     <meta charset="utf-8">
 		<title>For testing!</title>
 		<link href='http://fonts.googleapis.com/css?family=Lato' rel='stylesheet' type='text/css'>
-		<link rel="stylesheet" type="text/css" href="reset.css">
 		<link rel="stylesheet" type="text/css" href="style.css">
     <script src="testscript.js"></script>		
 	</head>
 	<body>
-    <main>
-      <h1>This is a test h1</h1>
-      <h2>Test h2</h2>
-      <h3>Test h3</h3>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at fermentum enim, vel tempor diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer rutrum leo in porttitor finibus. Nunc vitae diam vel leo tincidunt imperdiet in non turpis. Cras dui tellus, facilisis nec tempor vitae, congue cursus ante. Maecenas sit amet enim commodo, egestas mi id, consectetur leo. Cras justo nisl, ullamcorper sit amet risus a, pretium commodo nisl. Aliquam congue rutrum ex, ac eleifend tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum suscipit purus sit amet pretium aliquam. Donec sed metus vel elit fringilla rutrum ac sit amet risus. Vestibulum commodo efficitur convallis. Suspendisse eget rutrum lectus, interdum venenatis lacus. Suspendisse tristique massa vel nulla euismod elementum. Proin facilisis lacus justo, vel faucibus neque congue vel. Mauris ac arcu massa. <a href="#">Test link<a>
-      </p>
-    </main>
+    <div class="content">
+      <main>
+        <section>
+          <article>
+            <h1>I'm a header</h1>
+            <h2>Test h2</h2>
+            <h3>Written by Author</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at fermentum enim, vel tempor diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer rutrum leo in porttitor finibus. Nunc vitae diam vel leo tincidunt imperdiet in non turpis. Cras dui tellus, facilisis nec tempor vitae, congue cursus ante. Maecenas sit amet enim commodo, egestas mi id, consectetur leo. Cras justo nisl, ullamcorper sit amet risus a, pretium commodo nisl. Aliquam congue rutrum ex, ac eleifend tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum suscipit purus sit amet pretium aliquam. Donec sed metus vel elit fringilla rutrum ac sit amet risus. Vestibulum commodo efficitur convallis. Suspendisse eget rutrum lectus, interdum venenatis lacus. Suspendisse tristique massa vel nulla euismod elementum. Proin facilisis lacus justo, vel faucibus neque congue vel. Mauris ac arcu massa. <a href="#">Test link</a>
+            </p>
+          </article>
+          <footer>
+            <div class="f-padding">
+            </div>
+            <div class="comment">
+            </div>
+            <div class="view-full">
+            </div>
+          </footer>
+        </section>
+        <section>
+          <article>
+            <h1>I'm a header</h1>
+            <h2>Test h2</h2>
+            <h3>Written by Author</h3>
+            <p>
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin at fermentum enim, vel tempor diam. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Integer rutrum leo in porttitor finibus. Nunc vitae diam vel leo tincidunt imperdiet in non turpis. Cras dui tellus, facilisis nec tempor vitae, congue cursus ante. Maecenas sit amet enim commodo, egestas mi id, consectetur leo. Cras justo nisl, ullamcorper sit amet risus a, pretium commodo nisl. Aliquam congue rutrum ex, ac eleifend tortor. Interdum et malesuada fames ac ante ipsum primis in faucibus. Vestibulum suscipit purus sit amet pretium aliquam. Donec sed metus vel elit fringilla rutrum ac sit amet risus. Vestibulum commodo efficitur convallis. Suspendisse eget rutrum lectus, interdum venenatis lacus. Suspendisse tristique massa vel nulla euismod elementum. Proin facilisis lacus justo, vel faucibus neque congue vel. Mauris ac arcu massa. <a href="#">Test link</a>
+            </p>
+          </article>
+          <footer>
+            <div class="f-padding">
+            </div>
+            <div class="comment">
+            </div>
+            <div class="view-full">a
+            </div>
+          </footer>
+        </section>
+      </main>
+    </div>
 	</body>
 </html>
